tests/sema/fail/v5_fail_array_cap_field.ep
# COMPILE_FAIL_CONTAINS: unknown field i64[].cap

fun main(): void {
    let xs = new i64[]
    let n = xs.cap
}
